change label for manifest config "Webpage" -> "Base URL"

--- a/views/admin/manifest/config-manifest.ejs
+++ b/views/admin/manifest/config-manifest.ejs
@@ -25,7 +25,7 @@
       <input class="w-full" type="text" name="forumUrl" value="<%= config.forumUrl || '' %>">
     </label>
 
-    <label class="block"><span class="font-paragon">Webpage:</span>
+    <label class="block"><span class="font-paragon">Base URL:</span>
       <input class="w-full" type="text" name="webpage" value="<%= config.webpage || '' %>">
     </label>
 
